traefik-ingress/gateway-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-cwapi-java-prefix
spec:
  stripPrefix:
    prefixes:
      - /cw_api
      - /java
